# works-complaints

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  entrypoint.sh  requirements.txt
app/cf/: settings.py  urls.py
app/complaints/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
app/complaints/migrations/: 0001_initial.py  0002_complaintphoto_created_at.py  0002_initial.py  0003_alter_category_name_alter_zone_district_and_more.py  0003_complaintphoto_comment.py  0004_acknowledgementletter.py  0004_complaint_slug.py  0005_complaint_uid.py  0005_remove_acknowledgementletter_updated_at_and_more.py  0006_alter_acknowledgementletter_options.py  0006_alter_complaint_options_and_more.py  0007_alter_assigninvestigator_investigator.py  0008_remove_assigninvestigator_investigator_and_more.py  0009_remove_assigninvestigator_investigator_and_more.py  0010_remove_assigninvestigator_investigator_and_more.py  0011_rename_investigator_assigninvestigator_investigators.py  0012_changestatus.py  0013_alter_changestatus_options_alter_changestatus_status_and_more.py  0014_alter_complaint_ref.py  0015_alter_zone_district_alter_zone_zone.py  0016_alter_zone_district.py  0022_assigntechnician.py  (+15 more)
app/reports/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
app/templates/: 404.html  base.html  bottom.html  footer.html  footer2.html  messages.html  nav-bar.html  side-bar.html  top.html
app/users/: admin.py  backends.py  forms.py  models.py  tasks.py  urls.py  views.py
nginx/: Dockerfile  nginx.conf
(+82 files in other folders)
